--- a/Shopping_Buy_All/Shopping_Buy_All/App.config
+++ b/Shopping_Buy_All/Shopping_Buy_All/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Shopping_Buy_All.Properties.Settings.BD3K7G01_2022ConnectionString"
+            connectionString="Data Source=200.69.137.167,11333;Initial Catalog=BD3K7G01_2022;Persist Security Info=True;User ID=BD3K7G01_2022;Password=PSW01_78045"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <appSettings>
 	  <add key="CadenaBaseDatos" value="Data Source=200.69.137.167,11333;Initial Catalog=BD3K7G01_2022;Persist Security Info=True;User ID=BD3K7G01_2022;Password=PSW01_78045"/>
     </appSettings>
