Baja de Rubro terminada y funcional

--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -132,6 +132,12 @@
     <Compile Include="ABMS\ABM Productos\Product_Modify.Designer.cs">
       <DependentUpon>Product_Modify.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM Rubros\Rubro_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Rubros\Rubro_Delete.Designer.cs">
+      <DependentUpon>Rubro_Delete.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\ABM Rubros\Rubro_Modify.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -412,6 +418,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Productos\Product_Modify.resx">
       <DependentUpon>Product_Modify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Rubros\Rubro_Delete.resx">
+      <DependentUpon>Rubro_Delete.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Rubros\Rubro_Modify.resx">
       <DependentUpon>Rubro_Modify.cs</DependentUpon>
