--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -84,6 +84,12 @@
     <Compile Include="ABMS\ABM Local\Local_Modify.Designer.cs">
       <DependentUpon>Local_Modify.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM MarcaTarjeta\MarcaTarjeta_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM MarcaTarjeta\MarcaTarjeta_Delete.Designer.cs">
+      <DependentUpon>MarcaTarjeta_Delete.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\ABM MarcaTarjeta\MarcaTarjeta_Load.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -421,6 +427,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Local\Local_Modify.resx">
       <DependentUpon>Local_Modify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM MarcaTarjeta\MarcaTarjeta_Delete.resx">
+      <DependentUpon>MarcaTarjeta_Delete.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM MarcaTarjeta\MarcaTarjeta_Load.resx">
       <DependentUpon>MarcaTarjeta_Load.cs</DependentUpon>
