--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -294,8 +294,27 @@
     <Compile Include="ABMS\ABM Usuario\User_Modify.Designer.cs">
       <DependentUpon>User_Modify.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM vehiculos\Vehicle_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM vehiculos\Vehicle_Delete.Designer.cs">
+      <DependentUpon>Vehicle_Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM vehiculos\Vehicle_Load.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM vehiculos\Vehicle_Load.Designer.cs">
+      <DependentUpon>Vehicle_Load.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM vehiculos\Vehicle_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM vehiculos\Vehicle_Modify.Designer.cs">
+      <DependentUpon>Vehicle_Modify.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\AccesoADatos\AD_Local.cs" />
     <Compile Include="ABMS\AccesoADatos\AD_TipoComercio.cs" />
+    <Compile Include="Entidades\Automovil.cs" />
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\EstadoCivil.cs" />
     <Compile Include="Entidades\MarcaVehiculo.cs" />
@@ -530,6 +549,15 @@
     <EmbeddedResource Include="ABMS\ABM Usuario\User_Modify.resx">
       <DependentUpon>User_Modify.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM vehiculos\Vehicle_Delete.resx">
+      <DependentUpon>Vehicle_Delete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM vehiculos\Vehicle_Load.resx">
+      <DependentUpon>Vehicle_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM vehiculos\Vehicle_Modify.resx">
+      <DependentUpon>Vehicle_Modify.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Logged\Logged.resx">
       <DependentUpon>Logged.cs</DependentUpon>
     </EmbeddedResource>
@@ -616,7 +644,6 @@
   <ItemGroup>
     <Folder Include="ABMS\ABM Modelos\" />
     <Folder Include="ABMS\ABM Profesiones\" />
-    <Folder Include="ABMS\ABM Vehiculos\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\users.png" />
