Cambios finales Tarjeta y Marca Vehiculo

--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -114,23 +114,11 @@
     <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVehiculo_Modify.Designer.cs">
       <DependentUpon>MarcaVehiculo_Modify.cs</DependentUpon>
     </Compile>
-    <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVeh_Delete.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVeh_Delete.designer.cs">
-      <DependentUpon>MarcaVeh_Delete.cs</DependentUpon>
-    </Compile>
     <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVehiculo_Load.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVehiculo_Load.designer.cs">
       <DependentUpon>MarcaVehiculo_Load.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVeh_Modify.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVeh_Modify.designer.cs">
-      <DependentUpon>MarcaVeh_Modify.cs</DependentUpon>
     </Compile>
     <Compile Include="ABMS\ABM Productos\Product_Delete.cs">
       <SubType>Form</SubType>
@@ -198,35 +186,23 @@
     <Compile Include="ABMS\ABM Sexo\Sexo_Modify.Designer.cs">
       <DependentUpon>Sexo_Modify.cs</DependentUpon>
     </Compile>
-    <Compile Include="ABMS\ABM Tarjeta\Tarjetaa_Delete.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ABMS\ABM Tarjeta\Tarjetaa_Delete.Designer.cs">
-      <DependentUpon>Tarjetaa_Delete.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ABMS\ABM Tarjeta\Tarjetaa_Modify.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ABMS\ABM Tarjeta\Tarjetaa_Modify.Designer.cs">
-      <DependentUpon>Tarjetaa_Modify.cs</DependentUpon>
-    </Compile>
     <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Delete.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Delete.designer.cs">
+    <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Delete.Designer.cs">
       <DependentUpon>Tarjeta_Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Modify.Designer.cs">
+      <DependentUpon>Tarjeta_Modify.cs</DependentUpon>
     </Compile>
     <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Load.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Load.designer.cs">
       <DependentUpon>Tarjeta_Load.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Modify.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ABMS\ABM Tarjeta\Tarjeta_Modify.designer.cs">
-      <DependentUpon>Tarjeta_Modify.cs</DependentUpon>
     </Compile>
     <Compile Include="ABMS\ABM TipoComercio\TipoComercio_Delete.cs">
       <SubType>Form</SubType>
@@ -492,14 +468,8 @@
     <EmbeddedResource Include="ABMS\ABM MarcaVehiculo\MarcaVehiculo_Modify.resx">
       <DependentUpon>MarcaVehiculo_Modify.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ABMS\ABM MarcaVehiculo\MarcaVeh_Delete.resx">
-      <DependentUpon>MarcaVeh_Delete.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM MarcaVehiculo\MarcaVehiculo_Load.resx">
       <DependentUpon>MarcaVehiculo_Load.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ABMS\ABM MarcaVehiculo\MarcaVeh_Modify.resx">
-      <DependentUpon>MarcaVeh_Modify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Productos\Product_Delete.resx">
       <DependentUpon>Product_Delete.cs</DependentUpon>
@@ -525,20 +495,14 @@
     <EmbeddedResource Include="ABMS\ABM Sexo\Sexo_Modify.resx">
       <DependentUpon>Sexo_Modify.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ABMS\ABM Tarjeta\Tarjetaa_Delete.resx">
-      <DependentUpon>Tarjetaa_Delete.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ABMS\ABM Tarjeta\Tarjetaa_Modify.resx">
-      <DependentUpon>Tarjetaa_Modify.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Tarjeta\Tarjeta_Delete.resx">
       <DependentUpon>Tarjeta_Delete.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ABMS\ABM Tarjeta\Tarjeta_Load.resx">
-      <DependentUpon>Tarjeta_Load.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Tarjeta\Tarjeta_Modify.resx">
       <DependentUpon>Tarjeta_Modify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Tarjeta\Tarjeta_Load.resx">
+      <DependentUpon>Tarjeta_Load.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM TipoComercio\TipoComercio_Delete.resx">
       <DependentUpon>TipoComercio_Delete.cs</DependentUpon>
