--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -120,6 +120,30 @@
     <Compile Include="ABMS\ABM MarcaVehiculo\MarcaVehiculo_Load.designer.cs">
       <DependentUpon>MarcaVehiculo_Load.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM Modelos\Grilla_Modelos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Modelos\Grilla_Modelos.Designer.cs">
+      <DependentUpon>Grilla_Modelos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Modelos\Modelo_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Modelos\Modelo_Delete.Designer.cs">
+      <DependentUpon>Modelo_Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Modelos\Modelo_Load.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Modelos\Modelo_Load.Designer.cs">
+      <DependentUpon>Modelo_Load.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Modelos\Modelo_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Modelos\Modelo_Modify.Designer.cs">
+      <DependentUpon>Modelo_Modify.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\ABM Productos\Product_Delete.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -318,6 +342,7 @@
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\EstadoCivil.cs" />
     <Compile Include="Entidades\MarcaVehiculo.cs" />
+    <Compile Include="Entidades\Modelo.cs" />
     <Compile Include="Entidades\Producto.cs" />
     <Compile Include="Entidades\Sexo.cs" />
     <Compile Include="Entidades\Tarjeta.cs" />
@@ -345,6 +370,12 @@
     </Compile>
     <Compile Include="Logged\Ventanas\Vehiculos\MarcaVehiculo_Ventana.Designer.cs">
       <DependentUpon>MarcaVehiculo_Ventana.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Logged\Ventanas\Vehiculos\Modelo_Ventana.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Logged\Ventanas\Vehiculos\Modelo_Ventana.Designer.cs">
+      <DependentUpon>Modelo_Ventana.cs</DependentUpon>
     </Compile>
     <Compile Include="Logged\Ventanas\Vehiculos\Vehiculos_Ventana.cs">
       <SubType>Form</SubType>
@@ -387,12 +418,6 @@
     </Compile>
     <Compile Include="Logged\Ventanas\Tarjetas\MarcaTarjeta_Ventana.Designer.cs">
       <DependentUpon>MarcaTarjeta_Ventana.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Logged\Ventanas\Profesiones_Ventana.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Logged\Ventanas\Profesiones_Ventana.Designer.cs">
-      <DependentUpon>Profesiones_Ventana.cs</DependentUpon>
     </Compile>
     <Compile Include="Logged\Ventanas\Locales\Locales_Ventana.cs">
       <SubType>Form</SubType>
@@ -464,6 +489,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM MarcaVehiculo\MarcaVehiculo_Load.resx">
       <DependentUpon>MarcaVehiculo_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Modelos\Grilla_Modelos.resx">
+      <DependentUpon>Grilla_Modelos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Modelos\Modelo_Delete.resx">
+      <DependentUpon>Modelo_Delete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Modelos\Modelo_Load.resx">
+      <DependentUpon>Modelo_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Modelos\Modelo_Modify.resx">
+      <DependentUpon>Modelo_Modify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Productos\Product_Delete.resx">
       <DependentUpon>Product_Delete.cs</DependentUpon>
@@ -561,6 +598,9 @@
     <EmbeddedResource Include="Logged\Ventanas\Vehiculos\MarcaVehiculo_Ventana.resx">
       <DependentUpon>MarcaVehiculo_Ventana.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Logged\Ventanas\Vehiculos\Modelo_Ventana.resx">
+      <DependentUpon>Modelo_Ventana.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Logged\Ventanas\Vehiculos\Vehiculos_Ventana.resx">
       <DependentUpon>Vehiculos_Ventana.cs</DependentUpon>
     </EmbeddedResource>
@@ -581,9 +621,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Logged\Ventanas\Tarjetas\MarcaTarjeta_Ventana.resx">
       <DependentUpon>MarcaTarjeta_Ventana.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Logged\Ventanas\Profesiones_Ventana.resx">
-      <DependentUpon>Profesiones_Ventana.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Logged\Ventanas\Locales\Locales_Ventana.resx">
       <DependentUpon>Locales_Ventana.cs</DependentUpon>
@@ -632,10 +669,7 @@
   <ItemGroup>
     <None Include="Resources\menu-editor.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ABMS\ABM Modelos\" />
-    <Folder Include="ABMS\ABM Profesiones\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\users.png" />
   </ItemGroup>
