Se modifico abms clientes y logged
loggued(ya se puede acceder a ventanas haciendo click en las imagenes)

--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -706,7 +706,9 @@
   <ItemGroup>
     <None Include="Resources\menu-editor.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\vnote.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\users.png" />
   </ItemGroup>
